<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroudColor"
    tools:context=".Telephone">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260sp"
            android:layout_marginTop="650sp"
            android:onClick="openMain"
            android:text="@string/accept" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80sp"
            android:layout_marginTop="650sp"
            android:onClick="openMain"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/test"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:gravity="center"
            android:text="@string/sim"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240sp"
            android:gravity="center"
            android:text="@string/sim2"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="100sp"
            android:text="@string/q1"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="280sp"
            android:text="@string/q4"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="325sp"
            android:text="@string/q5"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="370sp"
            android:text="@string/q6"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="415sp"
            android:text="@string/q7"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="460sp"
            android:text="@string/q8"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="505sp"
            android:text="@string/q9"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="550sp"
            android:text="@string/q10"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="145sp"
            android:text="@string/q2"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="110sp"
            android:layout_marginTop="190sp"
            android:text="@string/q3"
            android:textAppearance="@style/ActionBarTitleTextStyle"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:buttonTint="@color/ColorAccent"/>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>