<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BackgroudColor"
    tools:context=".Information">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center"
            android:text="@string/txtInfo"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30sp"
            android:layout_marginTop="60sp"
            android:layout_marginRight="240sp"
            android:layout_marginBottom="570sp"
            app:srcCompat="@mipmap/tecmn" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="230sp"
            android:layout_marginTop="80sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="570sp"
            app:srcCompat="@mipmap/sep" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="260sp"
            android:layout_marginTop="500sp"
            android:layout_marginRight="30sp"
            android:layout_marginBottom="150sp"
            app:srcCompat="@mipmap/ito" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="170sp"
            android:layout_marginTop="600sp"
            android:onClick="openMain"
            android:text="@string/back" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="361dp"
            android:layout_height="268dp"
            android:layout_marginLeft="50sp"
            android:layout_marginTop="200sp"
            android:layout_marginRight="50sp"
            android:text="@string/information"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>